--- a/style.css
+++ b/style.css
@@ -267,11 +267,12 @@ input:focus, textarea:focus, select:focus {
 
 .todo-item {
   padding: 20px;
-  background-color: var(--background-200);
+  outline: 2px solid var(--background-200);
   border-radius: 10px;
   cursor: pointer;
 }
 
 .todo-item:hover {
-  background-color: var(--primary);
+  background-color: #26282b;
+  outline: 2px solid var(--primary);
 }
